Fix initial unit measurement bug. Fix pokedex overflow. Fix rapid summoning bug. Move navbar to top for mobile layout.

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ button {
     display: flex;
     flex-grow: 1;
 
-    overflow: hidden;
+    /* overflow: hidden; */
     
     background-color: var(--deep-grey);
     filter: drop-shadow(0px -10px 10px rgba(0, 0, 0, 0.404));
@@ -1223,8 +1223,12 @@ button {
 
 @media only screen and (max-width: 800px) {
 
-    #main {
-        flex-direction: column-reverse;
+    /* #main {
+        flex-direction: column;
+    } */
+
+    #content {
+        overflow: hidden;
     }
 
     #options {
